tests/paczka1/small_fuzzy/65936197.err
Error in line 4: F6dA0qW4 A608 86,9
Error in line 15: YOtoE2q A793 15,40
